--- a/scss/basics/_grid-settings.scss
+++ b/scss/basics/_grid-settings.scss
@@ -1,20 +1,24 @@
-// import default settings
-@import "vendor/chroma-grid/settings";
-
-// personal grid settings
-$column-amount			: 12;
-$column-width 			: em(70);
-$column-gutter 			: em(10);
-$container-padding 		: em(0);
-$container-width 		: em(960);
-
-$layout 				: responsive; // fixed, fluid, responsive
-
-$scaffolding 			: false;
-$debug-show-grid 		: false;
+@import "../vendor/chroma-grid/settings";						// imports all default grid settings
 
 
+// change the grid settings to your own needs
+
+$column-amount				: 12;					// number of columns
+$column-width 				: em(60);				// width of each column
+$column-gutter 				: em(20);				// gutter between two columns
+$container-padding			: em(10);				// gutter on sides of container
+$container-width			: em(940);				// maximum width of container
+$page-layout				: responsive;			// (responsive|fixed|fluid)
+
+// $scaffolding 			: true;					// creates a set of predefined css classes
+// $scaffolding-debug 		: true;					// creates matching classes for easy debugging
+
+// $debug-show-info 		: true; 				// shows or hides elements with .debug-info or .warning-info class
+// $debug-show-container	: true; 				// colors container elements for easier layout creation
+// $debug-show-row 			: true; 				// colors row elements for easier layout creation
+// $debug-show-column 		: true; 				// colors column elements for easier layout creation
+
+// $default-breakpoint 		: max-width 			// default behaviour for media queries
 
 
-// import the grid
-@import "vendor/chroma-grid/grid";
+@import "../vendor/chroma-grid/grid";							// imports the grid system
