Updated to using precompiled compass according to https://gist.github.com/noniq/1746744

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,8 +1,8 @@
-@import "compass";
-@import "vendor/chroma-mixins/all";
-@import "basics/resets";
+@import "vendor/compass";
+// @import "vendor/chroma-mixins/all";
+// @import "basics/grid-settings";
 
-@import "basics/grid-settings";
+@import "basics/resets";
 
 @import "basics/mixins";
 @import "basics/variables";
@@ -10,4 +10,3 @@
 @import "basics/image";
 
 @import "modules/misc";
-
