Remove chroma grid default inclusion

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,8 +1,9 @@
 @import "compass";
-@import "vendor/chroma-mixins/all";
-@import "basics/resets";
 
-@import "basics/grid-settings";
+// @import "vendor/chroma-mixins/all";
+// @import "basics/grid-settings";
+
+@import "basics/resets";
 
 @import "basics/mixins";
 @import "basics/variables";
